--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,6 @@
+include LICENSE
 include charset_normalizer/assets/frequencies.json
+recursive-include bench *.md
+recursive-include bench *.py
+recursive-include data *.srt
+recursive-include data *.txt
