--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - python setup.py install
 
 script:
-  - pytest --cov=charset_normalizer --cov-report=xml
+  - pytest --cov=charset_normalizer --cov-report=term-missing -rxXs test
 
 after_success:
   - codecov
