--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,18 @@ python:
 
 matrix:
   allow_failures:
-    - python: "3.5"  # TODO: Investigate why language detection act differently
-    - python: "3.10-dev"
+    - python: "3.5"
+
+before_install:
+  - "pip install -U pip setuptools"
+  - "pip install -r requirements.txt"
 
 install:
-  - pip install nose codecov
+  - pip install -r requirements.txt
   - python setup.py install
 
 script:
-  - "nosetests --with-coverage --cover-package=charset_normalizer test/*.py"
+  - pytest
 
 after_success:
   - codecov
