--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include charset_normalizer/assets/frequencies.json
 include README.md
 recursive-include data *.srt
 recursive-include data *.txt
+include charset_normalizer/py.typed
