--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         pip install -U pip setuptools
         pip install -r requirements.txt
+        pip uninstall -y charset-normalizer
     - name: Install the package
       run: |
         python setup.py install
