--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -U pip setuptools
-        pip install -r requirements.txt
-        pip install -r ./bin/requirements.txt
+        pip install -r dev-requirements.txt
     - name: Remove Chardet & Charset-Normalizer
       run: |
         pip uninstall -y chardet
