--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -21,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -U pip setuptools
-        pip install -r requirements.txt
-        pip install -r ./bin/requirements.txt
+        pip install -r dev-requirements.txt
         pip uninstall -y charset-normalizer
     - name: Install the package
       run: |
