:wrench: Add dev-requirements.txt into MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include LICENSE README.md charset_normalizer/py.typed
+include LICENSE README.md charset_normalizer/py.typed dev-requirements.txt
 recursive-include data *.srt
 recursive-include data *.txt
 recursive-include docs *
