:wrench: Revise jobs names for workflows

--- a/.github/workflows/chardet-bc.yml
+++ b/.github/workflows/chardet-bc.yml
@@ -3,7 +3,7 @@ name: Chardet BC Coverage
 on: [push, pull_request]
 
 jobs:
-  build:
+  chardet_bc:
     runs-on: ${{ matrix.os }}
 
     strategy:
