--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,13 +3,13 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  build:
+  tests:
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10.0-beta.4"]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10.0-rc.1"]
         os: [ubuntu-latest]
         include:
           - python-version: pypy3
