:wrench: Incl the NOTICE.md in sdist

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE README.md charset_normalizer/py.typed dev-requirements.txt
-recursive-include data *.srt
+recursive-include data *.md
 recursive-include data *.txt
 recursive-include docs *
 recursive-include tests *
