--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include LICENSE README.md charset_normalizer/py.typed dev-requirements.txt
+include LICENSE README.md CHANGELOG.md charset_normalizer/py.typed dev-requirements.txt
 recursive-include data *.md
 recursive-include data *.txt
 recursive-include docs *
