--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip setuptools
+          pip install -U pip setuptools setuptools_scm wheel build
           pip install -r dev-requirements.txt
           pip uninstall -y charset-normalizer
       - name: Install the package
@@ -61,12 +61,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip setuptools
+          pip install -U pip setuptools setuptools_scm wheel build
           pip install -r dev-requirements.txt
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build -nwx .
+          pip install -U ./dist/*.whl
       - name: Run tests
         run: |
           pytest
@@ -90,12 +91,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip setuptools
+          pip install -U pip setuptools setuptools_scm wheel build
           pip install -r dev-requirements.txt
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build -nwx .
+          pip install -U ./dist/*.whl
       - name: Clone the complete dataset
         run: |
           git clone https://github.com/Ousret/char-dataset.git
@@ -127,7 +129,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip setuptools
+          pip install -U pip setuptools setuptools_scm wheel build
           pip install -r dev-requirements.txt
       - name: Remove Chardet & Charset-Normalizer
         run: |
@@ -135,7 +137,8 @@ jobs:
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build -nwx .
+          pip install -U ./dist/*.whl
       - name: Clone the complete dataset
         run: |
           git clone https://github.com/Ousret/char-dataset.git
@@ -160,11 +163,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install -U setuptools setuptools_scm wheel build twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build -nwsx
         twine upload dist/*
