--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -177,6 +177,7 @@ jobs:
       matrix:
         os: [ ubuntu, windows, macos ]
         qemu: [ '' ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10" ]
         include:
           # Split ubuntu job for the sake of speed-up
           - os: ubuntu
@@ -206,6 +207,8 @@ jobs:
         shell: bash
       - name: Setup Python
         uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Update pip, wheel, setuptools, build, twine
         run: |
           python -m pip install -U pip wheel setuptools build twine
