--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,7 @@
 name: Release-Deployment CI
 
 on:
+  workflow_dispatch:
   release:
     types: [created]
 
@@ -209,15 +210,12 @@ jobs:
       - name: Update pip, wheel, setuptools, build, twine
         run: |
           python -m pip install -U pip wheel setuptools build twine
-      - name: Install dev-dependencies
-        run: |
-          pip install -r dev-requirements.txt
       - name: Build wheels
         uses: pypa/cibuildwheel@2.7.0
         env:
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
-          CHARSET_NORMALIZER_USE_MYPYC: '1'
+          CIBW_DEPENDENCY_VERSIONS: ./dev-requirements.txt
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
