--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -216,6 +216,7 @@ jobs:
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
           CIBW_BEFORE_BUILD: pip install -r dev-requirements.txt
+          CIBW_SKIP: pp*
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
