--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -221,7 +221,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: dist
+          path: ./wheelhouse/*.whl
 
   deploy:
 
