--- a/.github/workflows/mypyc-verify.yml
+++ b/.github/workflows/mypyc-verify.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
         os: [ubuntu-latest]
 
     steps:
@@ -24,8 +24,11 @@ jobs:
         pip install -r dev-requirements.txt
         pip uninstall -y charset-normalizer
     - name: Install the package
+      env:
+        CHARSET_NORMALIZER_USE_MYPYC: '1'
       run: |
-        python setup.py --use-mypyc install
+        python -m build --no-isolation
+        pip install ./dist/*.whl
     - name: Clone the complete dataset
       run: |
         git clone https://github.com/Ousret/char-dataset.git
