--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,8 @@ jobs:
         pip uninstall -y charset-normalizer
     - name: Install the package
       run: |
-        python setup.py install
+        python -m build
+        pip install ./dist/*.whl
     - name: Type checking (Mypy)
       run: |
         mypy --strict charset_normalizer
