--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,8 @@ jobs:
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build
+          pip install ./dist/*.whl
       - name: Type checking (Mypy)
         run: |
           mypy charset_normalizer
@@ -51,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10" ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10", "3.11-dev" ]
         os: [ ubuntu-latest ]
 
     steps:
@@ -67,7 +68,8 @@ jobs:
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build
+          pip install ./dist/*.whl
       - name: Run tests
         run: |
           pytest
@@ -96,7 +98,8 @@ jobs:
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build
+          pip install ./dist/*.whl
       - name: Clone the complete dataset
         run: |
           git clone https://github.com/Ousret/char-dataset.git
@@ -136,7 +139,8 @@ jobs:
           pip uninstall -y charset-normalizer
       - name: Install the package
         run: |
-          python setup.py install
+          python -m build
+          pip install ./dist/*.whl
       - name: Clone the complete dataset
         run: |
           git clone https://github.com/Ousret/char-dataset.git
@@ -163,7 +167,7 @@ jobs:
       - name: Build Wheel
         env:
           CHARSET_NORMALIZER_USE_MYPYC: '0'
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -211,10 +215,12 @@ jobs:
         run: |
           python -m pip install -U pip wheel setuptools build twine
       - name: Build wheels
-        uses: pypa/cibuildwheel@2.7.0
+        uses: pypa/cibuildwheel@2.10.2
         env:
+          CIBW_BUILD_FRONTEND: "build"
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
+          CIBW_CONFIG_SETTINGS: "--no-isolation"
           CIBW_BEFORE_BUILD: pip install -r dev-requirements.txt
           CIBW_SKIP: pp*
       - name: Upload artifacts
