:heavy_check_mark: Ensure tests run with cibuildwheel

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -222,6 +222,8 @@ jobs:
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
           CIBW_CONFIG_SETTINGS: "--no-isolation"
           CIBW_BEFORE_BUILD: pip install -r dev-requirements.txt
+          CIBW_TEST_REQUIRES: pytest codecov pytest-cov
+          CIBW_TEST_COMMAND: pytest {package}/tests
           CIBW_SKIP: pp*
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
