--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -160,10 +160,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: Update pip, setuptools, wheel and twine
+      - name: Update pip, setuptools, wheel, build and twine
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install setuptools wheel twine build
       - name: Build Wheel
         env:
           CHARSET_NORMALIZER_USE_MYPYC: '0'
