--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -221,7 +221,7 @@ jobs:
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
           CIBW_CONFIG_SETTINGS: "--no-isolation"
-          CIBW_BEFORE_BUILD: pip install -r dev-requirements.txt
+          CIBW_BEFORE_BUILD: pip install -r build-requirements.txt
           CIBW_TEST_REQUIRES: pytest codecov pytest-cov
           CIBW_TEST_COMMAND: pytest {package}/tests
           CIBW_SKIP: pp*
