--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10", "3.11-dev" ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10", "3.11" ]
         os: [ ubuntu-latest ]
 
     steps:
