--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11", "3.12-dev"]
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04]  # ubuntu-latest no longer supports Python 3.6
 
     steps:
     - uses: actions/checkout@v3
