--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,8 +2,7 @@ name: Continuous Delivery
 
 on:
   workflow_dispatch:
-    branches:
-      - master
+
   release:
     types:
       - created
@@ -97,14 +96,48 @@ jobs:
           name: dist
           path: ./wheelhouse/*.whl
 
+  checksum:
+    name: Compute hashes
+    runs-on: ubuntu-latest
+    needs:
+      - build-wheels
+      - universal-wheel
+    outputs:
+      hashes: ${{ steps.compute.outputs.hashes }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download distributions
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+      - name: Collected dists
+        run: |
+          tree dist
+      - name: Generate hashes
+        id: compute  #  needs.checksum.outputs.hashes
+        working-directory: ./dist
+        run: echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
+
+  provenance:
+    needs: checksum
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.5.0
+    permissions:
+      actions: read
+      id-token: write
+      contents: write
+    with:
+      subject-base64: ${{ needs.checksum.outputs.hashes }}
+      upload-assets: true
+
   deploy:
     name: 🚀 Deploy to PyPi
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     permissions:
       id-token: write
-    needs:
-      - universal_wheel
-      - build-wheels
+      contents: write
+    needs: provenance
     environment:
       name: pypi
       url: https://pypi.org/project/charset-normalizer/
@@ -120,3 +153,8 @@ jobs:
           tree dist
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Upload dists to GitHub Release
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: |
+          gh release upload ${{ github.ref_name }} dist/* --repo ${{ github.repository }}
