--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ unicode_backport =
 
 [options.entry_points]
 console_scripts =
-    normalizer = charset_normalizer.cli.normalizer:cli_detect
+    normalizer = charset_normalizer.cli:cli_detect
 
 [options]
 packages = find:
