--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Update pip, setuptools, wheel, build and twine
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel build
+          python -m pip install setuptools wheel build
       - name: Build Wheel
         env:
           CHARSET_NORMALIZER_USE_MYPYC: '0'
