--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description_content_type = text/markdown
 keywords = encoding, charset, charset-detector, detector, normalization, unicode, chardet, detect
 url = https://github.com/Ousret/charset_normalizer
 license = MIT
-author_email = ahmed.tahri@cloudnursery.dev
+author_email = tahri.ahmed@proton.me
 author = Ahmed TAHRI
 project_urls =
     Bug Reports = https://github.com/Ousret/charset_normalizer/issues
