:wrench: attempt to fix cd.yml *2

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,15 +46,15 @@ jobs:
     needs: pre_flight_check
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-12 ]
+        os: [ ubuntu-latest, windows-latest, macos-13 ]
         qemu: [ '' ]
         include:
           # Split ubuntu job for the sake of speed-up
-          - os: ubuntu
+          - os: ubuntu-latest
             qemu: aarch64
-          - os: ubuntu
+          - os: ubuntu-latest
             qemu: ppc64le
-          - os: ubuntu
+          - os: ubuntu-latest
             qemu: s390x
     steps:
       - name: Checkout
@@ -83,11 +83,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@f1859528322d7b29d4493ee241a167807661dfb4 # v2.21.2
         env:
-          #CIBW_BUILD_FRONTEND: "build"
+          CIBW_BUILD_FRONTEND: "build; args: --no-isolation"
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
           CIBW_ENVIRONMENT: CHARSET_NORMALIZER_USE_MYPYC='1'
           CIBW_BEFORE_BUILD: pip install -r build-requirements.txt
-          #CIBW_CONFIG_SETTINGS: "--build-option=--no-isolation"
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: pytest -c {package} {package}/tests
           CIBW_SKIP: pp* cp36*
