:wrench: change dependabot schedule to monthly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,13 +8,9 @@ updates:
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-
-  - package-ecosystem: pip
-    directory: /docs
-    schedule:
-      interval: daily
+      interval: "monthly"
