--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,9 +54,9 @@ jobs:
       - name: Run tests
         run: nox -s test-${{ matrix.python-version }}
       - name: "Upload artifact"
-        uses: "actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce"
+        uses: "actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808"
         with:
-          name: coverage-data
+          name: coverage-data-${{ matrix.python-version }}
           path: ".coverage.*"
           if-no-files-found: error
 
@@ -81,9 +81,9 @@ jobs:
       - name: Coverage WITHOUT preemptive
         run: nox -s coverage -- --coverage 95
       - name: "Upload artifact"
-        uses: "actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce"
+        uses: "actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808"
         with:
-          name: coverage-data
+          name: coverage-data-using-internal-coverage
           path: ".coverage.*"
           if-no-files-found: error
 
@@ -170,9 +170,9 @@ jobs:
       - name: Run tests with mypyc enabled
         run: nox -s test_mypyc-${{ matrix.python-version }}
       - name: "Upload artifact"
-        uses: "actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce"
+        uses: "actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808"
         with:
-          name: coverage-data
+          name: coverage-data-mypyc-${{ matrix.os }}-${{ matrix.python-version }}
           path: ".coverage.*"
           if-no-files-found: error
 
@@ -196,9 +196,10 @@ jobs:
         run: "python -m pip install --upgrade coverage"
 
       - name: "Download artifact"
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
+        uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e
         with:
-          name: coverage-data
+          pattern: coverage-data*
+          merge-multiple: true
 
       - name: "Combine & check coverage"
         run: |
@@ -207,7 +208,7 @@ jobs:
           python -m coverage report --ignore-errors --show-missing --fail-under=92
 
       - name: "Upload report"
-        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808
         with:
           name: coverage-report
           path: htmlcov
