Apply suggestions from code review

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         with:
           name: coverage-data-${{ matrix.python-version }}
           path: ".coverage.*"
+          include-hidden-files: true
           if-no-files-found: error
 
   detection_coverage:
@@ -85,6 +86,7 @@ jobs:
         with:
           name: coverage-data-using-internal-coverage
           path: ".coverage.*"
+          include-hidden-files: true
           if-no-files-found: error
 
   integration_test:
@@ -174,6 +176,7 @@ jobs:
         with:
           name: coverage-data-mypyc-${{ matrix.os }}-${{ matrix.python-version }}
           path: ".coverage.*"
+          include-hidden-files: true
           if-no-files-found: error
 
   coverage:
